[package]
name = "smlibrbase"
version = "0.1.5"
edition = "2021"
authors = ["smwasm@outlook.com"]
repository = "https://github.com/smwasm/smlibrbase.git"
license = "Apache-2.0"
description = "SmartModule Base Library for Wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
lazy_static = "1.5.0"

smcore = "0.1.5"
smdton = "0.1.3"

[lib]
crate-type = ["rlib", "cdylib"]
